# LogicGateSimulator

./: CMakeLists.txt  README.md
src/: main.cpp
src/components/: AndGate.cpp  AndGate.h  Gate.cpp  Gate.h  LED.cpp  LED.h  NotGate.cpp  NotGate.h  OrGate.cpp  OrGate.h  Switch.cpp  Switch.h
src/core/: Circuit.cpp  Circuit.h  Component.cpp  Component.h  Wire.cpp  Wire.h
src/gui/: Application.cpp  Application.h  Canvas.cpp  Canvas.h  Toolbar.cpp  Toolbar.h
src/utils/: Constants.h  FontManager.cpp  FontManager.h  Vector2.h
